operator/pkg/gateway-api/testdata/gamma/mesh-invalid-cross-namespace/input/httproute-gateway-conformance-mesh-test.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gateway-conformance-mesh-test
  namespace: gateway-conformance-mesh-client
spec:
  parentRefs:
    - group: ""
      kind: Service
      name: echo
      namespace: gateway-conformance-mesh
      port: 80
  rules:
    - backendRefs:
        - name: echo-v1
          namespace: gateway-conformance-mesh
          port: 8080
